--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,5 @@
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "no-referrer"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://api.example.com"
-
+Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://p.trellocdn.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://api.example.com"
 
